--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -1,5 +1,8 @@
 <div>
     <h1>Upcoming Angular Events</h1>
     <hr>
+    <div class="well">
+        <div>Hello World</div>
+    </div>
     <event-thumbnail [event]="event1"></event-thumbnail>
 </div>
