--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,12 +1,12 @@
 <div class="well hoverwell thumbnail" *ngIf="event">
     <h2>{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
-    <div [ngSwitch]="event.time">
+    <div [class.green]="event.time == '8:00 am'" [ngSwitch]="event.time">
         Time: {{event.time}}
         <span class="label label-info" *ngSwitchCase="'8:00 am'">(Early Start)</span>
         <span class="label label-warning" *ngSwitchCase="'10:00 am'">(Late Start)</span>
         <span class="label label-success" *ngSwitchDefault>(Normal Start)</span>
-    </div>    
+    </div>
     <div>Price: ${{event.price}}</div>
     <div *ngIf="event.location">
         <span>Location: {{event.location.address}}</span>
