--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,7 +1,7 @@
 <div class="well hoverwell thumbnail" *ngIf="event">
     <h2>{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
-    <div [class.green]="event.time == '8:00 am'" [ngSwitch]="event.time">
+    <div [ngClass]="{ green: event.time === '8:00 am', bold: event.time === '10:00 am' }" [ngSwitch]="event.time">
         Time: {{event.time}}
         <span class="label label-info" *ngSwitchCase="'8:00 am'">(Early Start)</span>
         <span class="label label-warning" *ngSwitchCase="'10:00 am'">(Late Start)</span>
