--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,7 +1,7 @@
 <div class="well hoverwell thumbnail" *ngIf="event">
     <h2>{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
-    <div [style.color]="event.time == '8:00 am' ? '#003300' : '#bbb'" [ngSwitch]="event.time">
+    <div [ngStyle]="getStartTimeStyle()" [ngSwitch]="event.time">
         Time: {{event.time}}
         <span class="label label-info" *ngSwitchCase="'8:00 am'">(Early Start)</span>
         <span class="label label-warning" *ngSwitchCase="'10:00 am'">(Late Start)</span>
