--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,4 +1,7 @@
-<div class="well hoverwell thumbnail" *ngIf="event">
+<div 
+    [routerLink]="['/events', event?.id]"
+    class="well hoverwell thumbnail"
+    *ngIf="event">
     <h2>{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
     <div [ngSwitch]="event.time">
