Criado o serviço de autenticação de usuário.
Registrado o serviço no módulo principal e mesmo assim, está disponível a partir do módulo de usuários.

--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -34,7 +34,14 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a [routerLink]="['user/profile']" >Welcome John</a>
+            <a 
+              *ngIf="!isAuthenticated()"
+              [routerLink]="['user/login']"
+            >Login</a>
+            <a
+              [routerLink]="['user/profile']"
+              *ngIf="isAuthenticated()"
+            >Welcome {{getUserFirstName()}}</a>
           </li>
         </ul>
       </div>
