--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -23,7 +23,14 @@
         placeholder="Password..." />
     </div>
         
-    <button type="submit" class="btn btn-primary">Login</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <button
+        type="submit"
+        class="btn btn-primary"
+    >Login</button>
+    <button
+        type="button"
+        class="btn btn-default"
+        (click)="cancel()"
+    >Cancel</button>
   </form>
 </div>
