--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -1,32 +1,43 @@
 <h1>Login</h1>
 <hr>
 <div class="col-md-4">
-  <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
+  <form 
+    #loginForm="ngForm"
+    (ngSubmit)="login(loginForm.value)" 
+    autocomplete="off"
+    novalidate>
     <div class="form-group" >
       <label for="userName">User Name:</label>
+      <em *ngIf="showRequired(loginForm.controls.userName)">Required</em>
       <input
         (ngModel)="userName"
         name="userName"
         id="userName"
         type="text"
         class="form-control"
-        placeholder="User Name..." />
+        required
+        placeholder="User Name..."/>
     </div>
     <div class="form-group" >
       <label for="password">Password:</label>
+      <em *ngIf="showRequired(loginForm.controls.password)">Required</em>
       <input
         (ngModel)="password"
         name="password" 
         id="password" 
         type="password" 
-        class="form-control" 
-        placeholder="Password..." />
+        class="form-control"
+        required
+        placeholder="Password..."/>
     </div>
-        
-    <button
-        type="submit"
-        class="btn btn-primary"
-    >Login</button>
+    
+    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
+        <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="loginForm.invalid"
+        >Login</button>
+    </span>
     <button
         type="button"
         class="btn btn-default"
