--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,9 +1,18 @@
 <div class="row" *ngFor="let session of sessions">
-  <collapsible-well [title]="session.name">
-    <h6>{{session.presenter}}</h6>
-    <span>Duration: {{session.duration}}</span><br />
-    <span>Level: {{session.level}}</span>
-    
-    <p>{{session.abstract}}</p>
+  <collapsible-well (expandedWell)="changeIconVisibility(!$event)">
+    <div well-title>
+      {{session.name}}
+      <i *ngIf="session.voters.length > 3 && showIcon"
+        class="glyphicon glyphicon-fire"
+        style="color: red;"
+      ></i>
+    </div>
+    <div well-body>
+      <h6>{{session.presenter}}</h6>
+      <span>Duration: {{session.duration}}</span><br />
+      <span>Level: {{session.level}}</span>
+      
+      <p>{{session.abstract}}</p>
+    </div>
   </collapsible-well>
 </div>
