--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -2,7 +2,7 @@
     [routerLink]="['/events', event?.id]"
     class="well hoverwell thumbnail"
     *ngIf="event">
-    <h2>{{event.name}}</h2>
+    <h2>{{event.name | uppercase}}</h2>
     <div>Date: {{event.date}}</div>
     <div [ngStyle]="getStartTimeStyle()" [ngSwitch]="event.time">
         Time: {{event.time}}
@@ -10,7 +10,7 @@
         <span class="label label-warning" *ngSwitchCase="'10:00 am'">(Late Start)</span>
         <span class="label label-success" *ngSwitchDefault>(Normal Start)</span>
     </div>
-    <div>Price: ${{event.price}}</div>
+    <div>Price: {{event.price | currency:'BRL'}}</div>
     <div *ngIf="event.location">
         <span>Location: {{event.location.address}}</span>
         <span class="pad-left">{{event.location.city}}, {{event.location.country}}</span>
