--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let session of sessions">
+<div class="row" *ngFor="let session of visibleSessions">
   <collapsible-well (expandedWell)="changeIconVisibility(!$event)">
     <div well-title>
       {{session.name}}
